<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyBox</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Gal Zohar</string>
    <string name="profile_status_title">Status:</string>
    <string name="profile_status">Travelling in Italy</string>
    <string name="profile_details">Details</string>
    <string name="profile_details_address">Address</string>
    <string name="profile_details_pre_family">Previous Family Name</string>
    <string name="profile_details_pre_family_data">Levi</string>
    <string name="profile_details_quotes">Quotes</string>
    <string name="profile_details_quotes_data">Something</string>
    <string name="profile_details_address_data">K. Yovel Jerusalem, Israel</string>
    <string name="profile_details_birthday">Birthday</string>
    <string name="profile_details_birthday_data">19 October 1987</string>
    <string name="profile_close_family_title">Close Family</string>
    <string name="profile_family_members_empty">No Family members =(</string>
    <string name="edit_profile_change_photo">Change photo</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_nickname">Nickname</string>
    <string name="edit_profile_last_name">Family name</string>
    <string name="edit_profile_previous_last_name">Previous family name</string>
    <string name="edit_profile_middle_name">Middle name</string>
    <string name="edit_profile_phone_number">Phone number</string>
    <string name="edit_profile_birthday">Birthday</string>
    <string name="edit_profile_address">Address</string>
    <string name="edit_profile_change_password">Change password</string>
    <string name="edit_profile_confirm_password">Confirm password</string>
    <string name="edit_profile_change_member_data">Tap on a family member to change detailes</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_action_menu">Edit</string>
    <string name="add_album_action_menu">Add album</string>
    <string name="father">Father</string>
    <string name="father_name">Arie</string>
    <string name="mother_name">Mati</string>
    <string name="father_query_name">Arie Zohar</string>
    <string name="title_activity_photo_albums">PhotoAlbumsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="album_title">Thailand</string>
    <string name="album_date">March 2011</string>
    <string name="image_description">Image description - bla 2011 - North Island mountain view taken from bla bla:)</string>
    <string name="empty_network_1_hi_user">Hi Gal,</string>
    <string name="empty_network_1_alone_in_network">it seems that you\'re alone in the family network</string>
    <string name="empty_network_1_do_you_know">Do you know any family member that has already joined \'FamilyBox\' application?</string>
    <string name="empty_network_2_join_existing">Join an existing network</string>
    <string name="empty_network_2_ask_a_family_member">ask a family member that has already joined \'FamilyBox\' for an invitation to his/her existing family network </string>
    <string name="empty_network_2_enter_name">Enter facebook name or email address</string>
    <string name="approve_invite_alright">Alright!</string>
    <string name="approve_invite_explain">An invitation request was sent, when accepted - you will be added to the family network and join your family</string>
    <string name="personal_welcome_title">Gal, Welcome!</string>
    <string name="personal_welcome_profile_pic">Are you happy with this profile picture? if not, click the \'change\' button</string>
    <string name="family_query_title">Hi User!</string>
    <string name="family_query_family_name">Your family name is NAME</string>
    <string name="family_query_members_query">Are these your family members?</string>
    <string name="family_member_query_name">Member Name</string>
    <string name="family_member_query_question">What is your family relation with him?</string>
    <string name="family_member_query_spinner_item_text">Option</string>
    <string name="family_member_1">Arie Zohar</string>
    <string name="family_member_2">Mati Zohar</string>
    <string name="family_member_3">Tal Zohar</string>
    <string name="member_query_text">What is your family relation with him?</string>
    <string name="member_query_relation">he is my father</string>
    <string name="news_feed_empty">Nothing to show</string>
    <string name="families_list_empty">Nothing to show</string>
    <string name="news_feed_empty_explain">Nobody is in your family tree network =(</string>
    <string name="families_list_empty_explain">Nobody is in your family tree network =(</string>
    <string name="news_feed_empty_click_here">Click here to expand your family tree</string>
    <string name="news_feed_item_update">Updated a new album \'home pics\' (32 photos) </string>
    <string name="news_feed_item_date_1">Today</string>
    <string name="news_feed_item_date_2">19:04</string>
    <string name="email_login_title">Log in</string>
    <string name="email_login_address">Email Address</string>
    <string name="email_login_pw">Password</string>
    <string name="email_invite_title">Invite Family Member</string>
    <string name="signup_upload_image">Add a \nprofile picture</string>
    <string name="signup_firstname">First name</string>
    <string name="signup_lastname">Last name</string>
    <string name="signup_email_address">Email Address</string>
    <string name="signup_previous_last">Previous family Name (optional)</string>
    <string name="signup_birthday">Birthday</string>
    <string name="signup_gender">Gender</string>
    <string name="signup_phone_number">Phone number (optional)</string>
    <string name="signup_middle_name">Middle name (optional)</string>
    <string name="signup_enter_password">Enter password</string>
    <string name="signup_confirm_password">Confirm password</string>
    <string name="drawer_my_profile">My profile</string>
    <string name="drawer_family_profile">My family profile</string>
    <string name="drawer_family_tree">Family tree</string>
    <string name="drawer_photos">Photos</string>
    <string name="drawer_news">News</string>
    <string name="drawer_notes">Notes</string>
    <string name="drawer_expand_network">Expand network</string>
    <string name="photos_tab_my_family">My family</string>
    <string name="photos_tab_shared_album">Shared Albums</string>
    <string name="photos_tab_favorites">Favorites</string>
    <string name="photo_albums">Photo albums</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_menu">Menu</string>
    <string name="expanded_action_menu">Settings</string>
    <string name="accept_action_menu">Accept changes</string>
    <string name="add_album_menu">add album menu</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="news_feed_title">News feed</string>
    <string name="profile_title">Profile</string>
    <string name="family_profile_title">Family profile</string>
    <string name="family_tree_title">Family Tree</string>
    <string name="parents">Parents</string>
    <string name="parent">Parent</string>
    <string name="children">Children</string>
    <string name="family_name">Family Name</string>
    <string name="family_parent_name">Parent Name</string>
    <string name="family_child_name">Child Name</string>
    <string name="child">Child</string>
    <string name="role">role</string>
    <string name="name">Gal</string>
    <string name="family">Family</string>
    <string name="position">position</string>
    <string name="type">type</string>
    <string name="search_family">Search family\.\.\.</string>
    <string name="ab_logout">Log out</string>
    <string name="ab_password">Change password</string>
    <string name="ab_about">About</string>
    <string name="ab_change_password">Change password</string>
    <string name="ab_current_password">Current password</string>
    <string name="ab_new_password">New password</string>
    <string name="ab_confirm_password">Confirm password</string>
    <string name="ab_error_current_password">*The password you entered is incorrect</string>
    <string name="add_album_date">Date</string>
    <string name="add_album_empty_network">Your network is empty</string>
    <string name="add_album_name">Album Name</string>
    <string name="add_album_description">Description</string>
    <string name="add_album_share">Share with\.\.\.</string>
    <string name="add_album_add_photos">Add Photos</string>
    <string name="add_album_add_photos_empty">Click to add new Photos</string>
    <string name="add_album_uploading">Uploading\.\.\.</string>
    <string name="add_album_done">Done</string>
    <string name="add_album_title">Add New Album</string>
    <string name="add_album_share_w_dialog">Share with:</string>
    <string name="my_family_album_empty">You\'re family doesn\'t have any albums yet =(</string>
    <string name="my_family_album_empty_add_album">Click here to add an album</string>
    <string name="add_album_err_no_description">Please enter album description</string>
    <string name="add_album_err_no_date">Please enter album date</string>
    <string name="add_album_err_no_name">Please enter album name</string>
    <string name="add_album_err_no_name_date">Please enter album name and date</string>
    <string name="add_album_err_no_name_desc">Please enter album name and description</string>
    <string name="add_album_err_no_date_desc">Please enter album date and description</string>
    <string name="add_album_err_no_fields">You did not fill any fields</string>
    <string name="add_album_err_no_photos">Please choose photos to upload</string>
    <string name="add_album_err_no_share">You didn\'t share the album with any family</string>
    <string name="add_album_err_not_uploaded">You\'re album was not uploaded due to:</string>
    <string name="add_album_success">All photos were successfully uploaded</string>
    <string name="multi_app_name">MultiImageChooser</string>
    <string name="free_version_label">Free version - Images left: %d</string>
    <string name="error_database">There was an error opening the images database. Please report the problem.</string>
    <string name="requesting_thumbnails">Requesting thumbnails, please be patient</string>
    <string name="id">id</string>
    <string name="version">version:</string>
    <string name="photo_hint">Add your caption here!</string>
    <string name="empty_photo_grid">No photos here</string>
    <string name="empty_album_section">No albums yet</string>
    <string name="expand_network_title">Expand network</string>

</resources>