<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_extra"
        android:icon="@drawable/overflow_button"
        android:orderInCategory="2"
        android:showAsAction="always|collapseActionView">
        <menu>
            <item
                android:id="@+id/logout"
                android:showAsAction="never"
                android:title="@string/ab_logout"/>
            <item
                android:id="@+id/password"
                android:showAsAction="never"
                android:title="@string/ab_password"/>
            <item
                android:id="@+id/about"
                android:showAsAction="never"
                android:title="@string/ab_about"/>
        </menu>
    </item>

</menu>