<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signup" >

    <com.wazapps.familybox.util.RoundedImageView
        android:id="@+id/riv_signup_upload_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/profile_pic_elipse_signup"
        android:cropToPadding="true"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/ll_signup_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/riv_signup_upload_image"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="11dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_signup_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/signup_firstname"
            android:inputType="textPersonName"
            android:paddingBottom="13dp"
            android:textColor="@color/gray_signup_input_fields"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_signup_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/signup_lastname"
            android:inputType="textPersonName"
            android:paddingBottom="13dp"
            android:textColor="@color/gray_signup_input_fields"
            android:textSize="13sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_signup_first_row"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="11dp"
        android:hint="@string/signup_email_address"
        android:inputType="textWebEmailAddress"
        android:paddingBottom="13dp"
        android:textColor="@color/gray_signup_input_fields"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_signup_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_email"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="11dp"
        android:hint="@string/signup_birthday"
        android:inputType="textPersonName"
        android:paddingBottom="13dp"
        android:textColor="@color/gray_signup_input_fields"
        android:textSize="13sp" />

    
     <EditText
        android:id="@+id/et_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_birthday"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="11dp"
        android:hint="@string/signup_enter_password"
        android:inputType="textPassword"
        android:paddingBottom="13dp"
        android:textColor="@color/gray_signup_input_fields"
        android:textSize="13sp" />
     <EditText
        android:id="@+id/et_signup_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_password"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="11dp"
        android:hint="@string/signup_confirm_password"
        android:inputType="textPassword"
        android:paddingBottom="13dp"
        android:textColor="@color/gray_signup_input_fields"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/selector_signup" >
    </Button>

</RelativeLayout>