<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/email_login_background" >

    <LinearLayout
        android:id="@+id/ll_change_ps_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ib_change_pw_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/email_login_x_button" />

        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="7dp"
            android:gravity="center_horizontal"
            android:text="@string/ab_change_password"
            android:textColor="@android:color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_change_pw_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_change_ps_title"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/ab_error_current_password"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_input_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_change_ps_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_current_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/ab_current_password"
            android:inputType="textPassword" >

            <requestFocus android:layout_width="wrap_content" />
        </EditText>

        <EditText
            android:id="@+id/et_new_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="12"
            android:hint="@string/ab_new_password"
            android:inputType="textPassword" >
        </EditText>

        <EditText
            android:id="@+id/et_confirm_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="12"
            android:hint="@string/ab_confirm_password"
            android:inputType="textPassword" >
        </EditText>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_change_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input_pw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:src="@drawable/selector_change" />

</RelativeLayout>