<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_news_feed_item_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_pic_elipse" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/iv_news_feed_item_user_image"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_news_feed_item_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_news_feed_item_username_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="(you)"
                android:textColor="@color/gray_news_feed_item"
                android:textSize="12dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_news_feed_item_acctual_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/news_feed_item_update"
            android:textColor="@color/gray_news_feed_item"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_news_feed_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_news_feed_item_date_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_feed_item_date_1"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tv_news_feed_item_date_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/news_feed_item_date_2"
            android:textColor="@color/gray_news_feed_item"
            android:textSize="10dp" />
    </LinearLayout>
</RelativeLayout>